2009-12-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-wsdl-descriptor-url): add type and group to
	defcustom

2009-12-07  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-update-issue)
	(jira2-create-issue): use car on the jira call result

	* soap-client.el (soap-encode-basic-type): use
	`url-insert-entities-in-string` when inserting the user data into
	the message
