@@ -1,3 +1,9 @@
+2010-02-11  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* jira2.el (jira2-do-jql-search, jira2-get-available-actions)
+	(jira2-get-fields-for-action, jira2-progress-workflow-action): new
+	functions.
+
 2009-12-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* jira2.el (jira2-wsdl-descriptor-url): add type and group to
